fix nats consumer to not recreate subjects or streams